fixed overflow on projects and roadmap page
removed margin and padding on content span to fix overflow issue.

--- a/themes/nav-community-v1/static/css/style.css
+++ b/themes/nav-community-v1/static/css/style.css
@@ -3408,6 +3408,16 @@ ul li.cat-item a {
 .roadmap-table {
   display: table;
   position: relative;
+  width: 100%;
+}
+
+body.roadmap-row .row, body.projects .row:nth-of-type(2) {
+	margin-left: 0px;
+	margin-right: 0px;
+}
+
+.col-sm-12 {
+	padding: 0px;
 }
 
 .roadmap-table:last-child .roadmap-connector {
